--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My GitHub Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        .container {
+            max-width: 700px;
+            margin: auto;
+            background: #fff;
+            border-radius: 10px;
+            padding: 32px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+        }
+        h1 {
+            color: #2d64ff;
+        }
+        p {
+            font-size: 1.15em;
+        }
+        .footer {
+            margin-top: 40px;
+            font-size: 0.95em;
+            color: #aaa;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>This is my first website hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Hello, world!</h1>
+        <p>Welcome to my first website hosted on GitHub Pages.</p>
+        <p>
+            🚀 You can edit this page by updating the <strong>index.html</strong> file in your GitHub repository.<br>
+            Add your own content, images, or links!
+        </p>
+        <div class="footer">
+            &copy; 2025 Your Name
+        </div>
+    </div>
 </body>
 </html>
