--- a/index.html
+++ b/index.html
@@ -4,38 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-        .container {
-            max-width: 700px;
-            margin: auto;
-            background: #fff;
-            border-radius: 10px;
-            padding: 32px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-        }
-        h1 {
-            color: #2d64ff;
-        }
-        p {
-            font-size: 1.15em;
-        }
-        .footer {
-            margin-top: 40px;
-            font-size: 0.95em;
-            color: #aaa;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Hello, world!</h1>
+        <!-- Navigation Bar -->
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="blog.html">Blog</a> |
+            <a href="nomics.html">Nomics</a> |
+            <a href="books.html">Books</a>
+        </nav>
         <p>Welcome to my first website hosted on GitHub Pages.</p>
         <p>
             🚀 You can edit this page by updating the <strong>index.html</strong> file in your GitHub repository.<br>
