--- a/blog.html
+++ b/blog.html
@@ -20,5 +20,22 @@
         <h2>First Post</h2>
         <p>This is where your first blog post could go.</p>
     </div>
+
+    <h2><a href="koala101.html">Koala 101: How to Use the Super Powers of AI</a></h2>
+<p><em>Published: August 4, 2025</em></p>
+<p>Discover how to master AI tools like a modern-day superhero... <a href="koala101.html">Read more</a></p>
+
+    <h2>Latest Blog Posts</h2>
+<ul>
+    <li>
+        <strong><a href="koala101.html">Koala 101: How to Use the Super Powers of AI</a></strong><br>
+        <small>Published: August 4, 2025</small><br>
+        Discover how to master AI tools like a modern-day superhero...
+    </li>
+    <!-- Add more posts as needed -->
+</ul>
+<p><a href="blog.html">View all blog posts →</a></p>
+
+    
 </body>
 </html>
